--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    <script src="script.js">
-    </script>
+    <h1>Rock Paper Scissors</h1>
+    <button id="newGame">New Game</button>
+    <div class="buttonContainer">
+        <p>Choose your action!</p>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+
+    <div class="resultsContainer">
+        <p id="choices"></p>
+        <p id="round"></p>
+        <p id="score"></p>
+        <p id="game"></p>
+    </div>
 </body>
+
 </html>
